--- a/i18n/fr/label.json
+++ b/i18n/fr/label.json
@@ -4,5 +4,23 @@
   "context": "Contexte",
   "instructions": "Instructions",
   "num_ctx": "Nombre maximale de jetons",
-  "max_messages_ctx": "Nombre de messages"
+  "max_messages_ctx": "Nombre de messages",
+  "frequency_penalty": "Pénalité de Fréquence",
+  "function_call": "Appel de Fonction",
+  "logit_bias": "Biais de Logit",
+  "logprobs": "Probabilités Logarithmiques",
+  "max_completion_tokens": "Nombre Maximum de Jetons de Complétion",
+  "n": "Nombre de Choix",
+  "parallel_tool_calls": "Appels d'Outils en Parallèle",
+  "presence_penalty": "Pénalité de Présence",
+  "response_format": "Format de Réponse",
+  "seed": "Graine",
+  "stop": "Arrêter",
+  "store": "Stocker la Sortie",
+  "stream": "Diffusion de la Sortie",
+  "temperature": "Température",
+  "tool_choice": "Choix de l'Outil",
+  "top_logprobs": "Probabilités Logarithmiques Maximales",
+  "top_p": "Top P",
+  "user": "ID de l'Utilisateur Final"
 }
